--- a/src/app/hub/user-notifications/user-notifications.component.html
+++ b/src/app/hub/user-notifications/user-notifications.component.html
@@ -1,8 +1,18 @@
-<div class="innerhldr">
+<div class="set-12" *ngIf="!isDataAvailable">
+  <mat-spinner></mat-spinner>
+</div>
+
+<div class="innerhldr" *ngIf="isDataAvailable">
   <div class="set-3">&nbsp;</div>
 
   <div class="set-6">
-    <mat-card class="set-12">
+    <mat-card class="set-12" *ngIf="notifications.length == 0">
+      <div class="set-12 notification">
+        <h3>No tienes notificaciones</h3>
+      </div>
+    </mat-card>
+
+    <mat-card class="set-12" *ngIf="notifications.length != 0">
       <div class="set-12" *ngFor="let notification of notifications">
         <div class="set-12 notification" *ngIf="notification.type == 'document_invite'">
           <div class="set-2">
@@ -15,7 +25,8 @@
               <strong><small>{{notification.document.title}}</small></strong>
             </p>
             <p>
-              <small>{{notification.created_at | date: 'mediumDate'}} - {{notification.created_at | date: 'mediumTime'}}</small>
+              <small>{{notification.created_at | date: 'mediumDate'}} - {{notification.created_at | date:
+                'mediumTime'}}</small>
             </p>
           </div>
 
