--- a/src/app/hub/user-notifications/user-notifications.component.scss
+++ b/src/app/hub/user-notifications/user-notifications.component.scss
@@ -1,11 +1,22 @@
 :host {
   margin-top: 70px;
 
+  mat-spinner {
+    position: absolute !important;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
   mat-card {
     padding: 0 !important;
   }
 
   .notification {
+    h3 {
+      margin: 0;
+    }
+
     display: flex;
     align-items: center;
     padding: 15px;
