--- a/src/app/pando/users-list/users-list.component.html
+++ b/src/app/pando/users-list/users-list.component.html
@@ -1,58 +1,77 @@
+<div class="set-12" *ngIf="!isDataAvailable">
+  <mat-spinner></mat-spinner>
+</div>
+
 <div class="set-12" *ngIf="isDataAvailable">
-  <table mat-table [dataSource]="dataSource">
-    <ng-container matColumnDef="select">
-      <th mat-header-cell *matHeaderCellDef>
-        <mat-checkbox (change)="$event ? toggleAllRows() : null" [checked]="selection.hasValue() && isAllSelected()"
-          [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()" disabled>
-        </mat-checkbox>
-      </th>
-      <td mat-cell *matCellDef="let row">
-        <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
-          [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)" disabled>
-        </mat-checkbox>
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>Nombre</th>
-      <td mat-cell *matCellDef="let users">
-        <small>{{users.firstname}} {{users.lastname}}</small>
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef>E-mail</th>
-      <td mat-cell *matCellDef="let users">
-        <small>{{users.email}}</small>
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="activities">
-      <th mat-header-cell *matHeaderCellDef>Actividades</th>
-      <td mat-cell *matCellDef="let users">
-        <small *ngIf="users.activities.length == 0">NA</small>
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="menu">
-      <th mat-header-cell *matHeaderCellDef>&nbsp;</th>
-      <td mat-cell *matCellDef="let users">
-        <button type="button" [matMenuTriggerFor]="moreMenu">
-          <mat-icon>more_vert</mat-icon>
+  <div class="set-12">
+    <div class="set-6">
+      <mat-form-field appearance="outline">
+        <mat-label>Búscar usuario...</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ej. Andrea" autocomplete="off">
+        <button matSuffix mat-icon-button>
+          <mat-icon>groups</mat-icon>
         </button>
-        <mat-menu #moreMenu="matMenu">
-          <button mat-menu-item (click)="onAddUserPermissions(users._id)">
-            <mat-icon>add</mat-icon>
-            <span>Agregar permisos</span>
+      </mat-form-field>
+    </div>
+  </div>
+
+  <div class="set-12 userlist">
+    <table mat-table [dataSource]="dataSource">
+      <ng-container matColumnDef="select">
+        <th mat-header-cell *matHeaderCellDef>
+          <mat-checkbox (change)="$event ? toggleAllRows() : null" [checked]="selection.hasValue() && isAllSelected()"
+            [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()" disabled>
+          </mat-checkbox>
+        </th>
+        <td mat-cell *matCellDef="let row">
+          <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
+            [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)" disabled>
+          </mat-checkbox>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Nombre</th>
+        <td mat-cell *matCellDef="let users">
+          <small>{{users.firstname}} {{users.lastname}}</small>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef>E-mail</th>
+        <td mat-cell *matCellDef="let users">
+          <small>{{users.email}}</small>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="activities">
+        <th mat-header-cell *matHeaderCellDef>Actividades</th>
+        <td mat-cell *matCellDef="let users">
+          <small *ngIf="users.activities.length == 0">NA</small>
+          <small *ngIf="users.activities.length != 0">{{users.activities[0].viewValue}}</small>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="menu">
+        <th mat-header-cell *matHeaderCellDef>&nbsp;</th>
+        <td mat-cell *matCellDef="let users">
+          <button type="button" [matMenuTriggerFor]="moreMenu">
+            <mat-icon>more_vert</mat-icon>
           </button>
-        </mat-menu>
-      </td>
-    </ng-container>
+          <mat-menu #moreMenu="matMenu">
+            <button mat-menu-item (click)="onAddUserPermissions(users._id)">
+              <mat-icon>add</mat-icon>
+              <span>Agregar permisos</span>
+            </button>
+          </mat-menu>
+        </td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
 
-  <mat-paginator #matPaginator [length]="users.length" [pageSizeOptions]="[20, 40, 60, 80, 100]" showFirstLastButtons>
-  </mat-paginator>
+    <mat-paginator #matPaginator [length]="users.length" [pageSizeOptions]="[20, 40, 60, 80, 100]" showFirstLastButtons>
+    </mat-paginator>
+  </div>
 </div>
