--- a/src/app/pando/users-list/users-list.component.scss
+++ b/src/app/pando/users-list/users-list.component.scss
@@ -1,4 +1,17 @@
 :host {
   padding: 40px;
   margin-top: 70px;
+
+  .userlist {
+    -webkit-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.5);
+  }
+
+  mat-spinner {
+    position: absolute !important;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
