add support component

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,6 +23,7 @@ textarea {
   outline: none;
   border: none;
   background: none;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 textarea {
