--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <div class="app-pagelet" [user]="user" *ngIf="isDataAvailable"></div>
 
   <router-outlet></router-outlet>
+  <div class="message-box" [user]="user" *ngIf="isDataAvailable"></div>
 </div>
 
 <div class="set-12 app-footer"></div>
