--- a/src/app/hub/sign-up/sign-up.component.html
+++ b/src/app/hub/sign-up/sign-up.component.html
@@ -4,45 +4,50 @@
 
   <form [formGroup]="signUpFormGroup" (submit)="onSignUp(signUpFormGroup)">
     <div class="set-6">
-      <ly-field appearance="outlined" [lyWidth]="1">
-        <input lyNativeControl type="text" formControlName="firstname">
-        <ly-label>Nombre(s) *</ly-label>
-      </ly-field>
+      <mat-form-field appearance="outline">
+        <mat-label>Nombre(s)</mat-label>
+        <input matInput type="text" autocomplete="off" formControlName="firstname">
+      </mat-form-field>
     </div>
 
     <div class="set-6">
-      <ly-field appearance="outlined" [lyWidth]="1">
-        <input lyNativeControl type="text" formControlName="lastname">
-        <ly-label>Apellido(s) *</ly-label>
-      </ly-field>
+      <mat-form-field appearance="outline">
+        <mat-label>Apellido(s)</mat-label>
+        <input matInput type="text" autocomplete="off" formControlName="lastname">
+      </mat-form-field>
     </div>
 
     <div class="set-6">
-      <ly-field appearance="outlined" [lyWidth]="1">
-        <input lyNativeControl type="text" formControlName="email">
-        <ly-label>Correo electrónico *</ly-label>
-      </ly-field>
+      <mat-form-field appearance="outline">
+        <mat-label>Correo electrónico</mat-label>
+        <input matInput type="text" autocomplete="off" formControlName="email">
+      </mat-form-field>
     </div>
 
     <div class="set-6">
-      <ly-field appearance="outlined" [lyWidth]="1">
-        <input lyNativeControl type="password" formControlName="password">
-        <ly-label>Contraseña *</ly-label>
-      </ly-field>
+      <mat-form-field appearance="outline">
+        <mat-label>Contraseña</mat-label>
+        <input matInput [type]="hide ? 'password' : 'text'" autocomplete="off" formControlName="password">
+        <button type="button" matSuffix (click)="hide = !hide">
+          <mat-icon color="primary">
+            {{ hide ? 'visibility_off' : 'visibility' }}
+          </mat-icon>
+        </button>
+      </mat-form-field>
     </div>
 
     <div class="set-6">
-      <ly-field appearance="outlined" [lyWidth]="1">
-        <input lyNativeControl type="text" formControlName="phone">
-        <ly-label>Teléfono</ly-label>
-      </ly-field>
+      <mat-form-field appearance="outline">
+        <mat-label>Teléfono</mat-label>
+        <input matInput type="text" autocomplete="off" formControlName="phone">
+      </mat-form-field>
     </div>
 
     <div class="set-6">
-      <ly-field appearance="outlined" [lyWidth]="1">
-        <input lyNativeControl type="text" formControlName="zipcode">
-        <ly-label>Código postal</ly-label>
-      </ly-field>
+      <mat-form-field appearance="outline">
+        <mat-label>Código postal</mat-label>
+        <input matInput type="text" autocomplete="off" formControlName="zipcode">
+      </mat-form-field>
     </div>
 
     <div class="set-12 legals">
@@ -75,7 +80,7 @@
         <small>¿Ya tienes cuenta? <a href="#" routerLink="/hub/ingresar">Ingresar</a></small>
       </div>
       <div class="set-6 txt-right">
-        <button type="submit" ly-button raised bg="primary"
+        <button type="submit" mat-raised-button color="primary"
           [disabled]="signUpFormGroup.invalid || submitted">Registrarme</button>
       </div>
     </div>
