--- a/src/styles.scss
+++ b/src/styles.scss
@@ -338,3 +338,7 @@ mat-form-field {
 .mat-checkbox-disabled {
   cursor: not-allowed !important;
 }
+
+.mat-horizontal-content-container {
+  padding: 0 !important;
+}
