--- a/src/app/components/app-pagelet/app-pagelet.component.scss
+++ b/src/app/components/app-pagelet/app-pagelet.component.scss
@@ -1,8 +1,8 @@
 :host {
-  position: relative;
+  position: fixed;
   z-index: 99;
 
-  ly-toolbar {
+  mat-toolbar {
     height: 80px;
     padding: 0 40px;
     background: rgba($color: #ffffff, $alpha: 0.79);
@@ -10,9 +10,24 @@
   }
 
   .logo {
+    display: flex;
+    align-items: center;
+
+    * {
+      margin: 0;
+    }
+
     img {
-      width: 7%;
+      width: 30%;
       float: left;
+      cursor: pointer;
+    }
+
+    input {
+      padding: 10px;
+      border: 1px solid rgba($color: #000000, $alpha: 0.1);
+      width: 100%;
+      border-radius: 4px;
     }
   }
 
